--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -51,8 +51,13 @@ const capitalizedTitle = capitalizeFirstLetter(titleLang);
       content="Logo de Erick Gonzalez, desarrollador web."
     />
     <meta property="og:site_name" content="Portafolio Erick Gonzalez" />
+
     <!-- Twitter Meta Tags -->
-    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:card" content="summary_large_image">
+     <meta
+      property="twitter:image"
+      content="https://khelde.vercel.app/kdl.webp"
+    />
     <meta property="twitter:url" content="https://khelde.vercel.app/es/home" />
     <meta property="twitter:title" content="Portafolio de Erick Gonzalez" />
     <meta
@@ -60,13 +65,10 @@ const capitalizedTitle = capitalizeFirstLetter(titleLang);
       content="Portafolio de Erick Gonzalez, desarrollador web junior con experiencia en frontend y backend. Mira mis proyectos y habilidades."
     />
     <meta
-      property="twitter:image"
-      content="https://khelde.vercel.app/kdl.webp"
-    />
-    <meta
       property="twitter:image:alt"
       content="Logo de Erick Gonzalez, desarrollador web."
     />
+
     <!-- Metadatos para WhatsApp (Usa los mismos que para Open Graph) -->
     <meta property="og:image" content="https://khelde.vercel.app/kdl.webp" />
     <meta property="og:title" content="Portafolio de Erick Gonzalez" />
