fix(ui): Se corrigen errores de dimensiones en elformulario de envio de comentarios, se quitan paquetes y se optimizan estilos

--- a/src/components/templates/enviarOpinion.astro
+++ b/src/components/templates/enviarOpinion.astro
@@ -3,6 +3,6 @@ import {SendOpinions} from '@/components/features/opinions/sendOpinions'
 const {currentLocale} = Astro;
 ---
 
-<div class="hero-content w-full">
+<div class="card not-first:isolate flex justify-center items-center w-full h-screen overflow-y-auto">
     <SendOpinions client:load currentLocale={currentLocale}/>
 </div>
