--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -101,7 +101,7 @@ const capitalizedTitle = capitalizeFirstLetter(titleLang);
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
   <body class="bg-base-300">
-    <div id="swup" class="transition-fade">
+    <div>
       <slot />
     </div>
     <script>
@@ -110,31 +110,6 @@ const capitalizedTitle = capitalizeFirstLetter(titleLang);
         document.documentElement.setAttribute("data-theme", theme);
       })();
     </script>
-    <script src="../js/swup-init.js"></script>
+    <script src="../js/ascii.js"></script>
   </body>
 </html>
-<style is:global>
-  .sticky-navbar {
-    position: sticky;
-    top: 0;
-    height: 3px;
-  }
-
-  .shadow__skew {
-    animation: uppcolor 4s ease-in-out;
-  }
-
-  @keyframes uppcolor {
-    0% {
-      filter: blur(15rem);
-    }
-
-    50% {
-      filter: blur(-20rem);
-    }
-
-    100% {
-      filter: blur(4rem);
-    }
-  }
-</style>
