--- a/src/pages/en/comments.astro
+++ b/src/pages/en/comments.astro
@@ -4,7 +4,7 @@ import EnviarOpinion from '@/components/templates/enviarOpinion.astro';
 ---
 
 <Layout>
-  <header class="relative w-full min-h-screen overflow-hidden">
+  <header class="relative w-full min-h-screen">
     <div class="hero w-full h-screen">
       <svg xmlns="http://www.w3.org/2000/svg" class="fixed inset-0 w-full h-full pointer-events-none" preserveAspectRatio="xMidYMid slice">
         <defs id="pattern" width="20" height="20" patternTransform="rotate(20) scale(2)" patternUnits="userSpaceOnUse">
