--- a/src/pages/es/home.astro
+++ b/src/pages/es/home.astro
@@ -10,7 +10,7 @@ const {currentLocale} = Astro;
 ---
 
 <Layout>
-  <header class="relative w-full transition-all duration-500 ease-in-out"> 
+  <header class="relative w-full transition-all duration-500 ease-in-out" role="banner"> 
     <div class="w-full lg:p-0 md:p-10 p-10">
       <Nav client:load currentLocale={currentLocale}/>
     </div>
