fix(animations): Se mejoran las animaciones y ala accesibilidad de la pagina por medio de Vercel Toolbar

--- a/src/pages/en/home.astro
+++ b/src/pages/en/home.astro
@@ -10,27 +10,29 @@ const {currentLocale} = Astro;
 ---
 
 <Layout>
-  <header class="relative w-full transition-all duration-500 ease-in-out" role="banner"> 
+  <header class="relative w-full" role="banner"> 
     <div class="w-full lg:p-0 md:p-10 p-10">
       <Nav client:load currentLocale={currentLocale}/>
     </div>
-    <section class="w-full h-full">
-      <div class="hero bg-base-300 min-h-screen scroll-m-4 lg:scroll-m-0 md:scroll-m-0" id="home">
-        <Header />
-      </div>
-      <div class="hero bg-base-300 min-h-screen flex justify-center items-start scroll-m-4 lg:scroll-m-0 md:scroll-m-0" id="about">
-        <Acerca />
-      </div>
-      <div class="hero bg-base-300 min-h-screen flex justify-center items-start scroll-m-4 lg:scroll-m-0 md:scroll-m-0" id="projects">
-        <Proyectos />
-      </div>
-      <div class="hero bg-base-300 min-h-screen flex justify-center items-start" id="opinions">
-        <Opiniones />
-      </div>
-      <div class="hero bg-base-300 min-h-screen scroll-m-14 lg:scroll-m-12 md:scroll-m-0" id="contact">
-        <Contactos>
-      </div>
-    </section>
+    <main role="main">
+      <section class="w-full h-full">
+        <div class="hero bg-base-300 min-h-screen scroll-m-4 lg:scroll-m-0 md:scroll-m-0" id="home">
+          <Header />
+        </div>
+        <div class="hero bg-base-300 min-h-screen flex justify-center items-start scroll-m-4 lg:scroll-m-0 md:scroll-m-0" id="about">
+          <Acerca />
+        </div>
+        <div class="hero bg-base-300 min-h-screen flex justify-center items-start scroll-m-4 lg:scroll-m-0 md:scroll-m-0" id="projects">
+          <Proyectos />
+        </div>
+        <div class="hero bg-base-300 min-h-screen flex justify-center items-start" id="opinions">
+          <Opiniones />
+        </div>
+        <div class="hero bg-base-300 min-h-screen scroll-m-14 lg:scroll-m-12 md:scroll-m-0" id="contact">
+          <Contactos>
+        </div>
+      </section>
+    </main>
   </header>
 </Layout>
 
