fix(bugs): Se corrigen errores de etiquetas de cierre y una validacion con react-hook-form

--- a/src/pages/fr/home.astro
+++ b/src/pages/fr/home.astro
@@ -29,7 +29,7 @@ const {currentLocale} = Astro;
         <Opiniones />
       </div>
       <div class="hero bg-base-300 min-h-screen scroll-m-14 lg:scroll-m-12 md:scroll-m-0" id="contact">
-        <Contactos>
+        <Contactos />
         </div>
       </section>
     </main>
