fix(prefix): Se quito el prefijo xs, se coloca puntos de interrupcion

--- a/src/components/templates/Header.astro
+++ b/src/components/templates/Header.astro
@@ -14,7 +14,7 @@ const i18n = getI18N({ currentLocale });
 	<Bubble className="bg-secondary" position="bottom-96" delay={0.5} duration={26} client:load />     
 	
 	<div class="avatar animate__animated animate__fadeIn">
-		<div class="ring-primary ring-offset-base-100 w-36 xs:w-40 sm:w-56 md:w-[250px] lg:w-[350px] xl:w-[450px] rounded-full ring-4 border-dashed ring-offset-8">
+		<div class="ring-primary ring-offset-base-100 w-36 min-[480px]:w-40 sm:w-56 md:w-[250px] lg:w-[350px] xl:w-[450px] rounded-full ring-4 border-dashed ring-offset-8">
 			<picture>
 				<source media="(min-width: 768px)" srcset="/yop_450.webp" />
 				<img src="/yop_250.webp" alt="muke78" loading="lazy" />
