perf(linter): Cambio de prettier a biome para mejor eficacia en formateo de codigo y mejor rapidez

--- a/src/components/templates/Header.astro
+++ b/src/components/templates/Header.astro
@@ -1,7 +1,14 @@
 ---
-import { getI18N } from '@/i18n';
-import { Bubble }from '@/components/atoms/Bubble';
-import { Github, Linkedin, Mail, MessageCircle, MoveRight, SquareArrowOutUpRight } from 'lucide-react';
+import { getI18N } from "@/i18n";
+import { Bubble } from "@/components/atoms/Bubble";
+import {
+	Github,
+	Linkedin,
+	Mail,
+	MessageCircle,
+	MoveRight,
+	SquareArrowOutUpRight,
+} from "lucide-react";
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
 ---
