--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,27 +4,34 @@ import "@/styles/styles.css";
 import "@/styles/app.css";
 import "swiper/swiper-bundle.css";
 import {
-  dataTitlePage,
-  dataTitlePageEN,
-  dataTitlePageFR,
+	dataTitlePage,
+	dataTitlePageEN,
+	dataTitlePageFR,
 } from "@/utils/dataTitlePage";
 
 const pathSegments = Astro.url.pathname.split("/");
 const { currentLocale } = Astro;
 
 const titles =
-  currentLocale === "en"
-    ? dataTitlePageEN
-    : currentLocale === "fr"
-      ? dataTitlePageFR
-      : dataTitlePage;
+	currentLocale === "en"
+		? dataTitlePageEN
+		: currentLocale === "fr"
+			? dataTitlePageFR
+			: dataTitlePage;
 
-const pageIndex = pathSegments[2] === "about" ? 1 : pathSegments[2] === "projects" ? 2 : pathSegments[2] === "contact" ? 3 : 0;
+const pageIndex =
+	pathSegments[2] === "about"
+		? 1
+		: pathSegments[2] === "projects"
+			? 2
+			: pathSegments[2] === "contact"
+				? 3
+				: 0;
 
 const titleLang = titles[pageIndex];
 
 function capitalizeFirstLetter(string) {
-  return string.charAt(0).toUpperCase() + string.slice(1);
+	return string.charAt(0).toUpperCase() + string.slice(1);
 }
 
 const capitalizedTitle = capitalizeFirstLetter(titleLang);
