--- a/src/components/templates/Acerca.astro
+++ b/src/components/templates/Acerca.astro
@@ -1,5 +1,5 @@
 ---
-import { TabsAcerca } from '@/components/organisms/TabsAcerca'
+import { TabsAcerca } from "@/components/organisms/TabsAcerca";
 const { currentLocale } = Astro;
 ---
 
