--- a/src/components/templates/Contacto.astro
+++ b/src/components/templates/Contacto.astro
@@ -1,5 +1,5 @@
 ---
-import { Form } from '@/components/features/contact/Form'
+import { Form } from "@/components/features/contact/Form";
 const { currentLocale } = Astro;
 ---
 
