--- a/src/components/templates/Proyectos.astro
+++ b/src/components/templates/Proyectos.astro
@@ -1,5 +1,5 @@
 ---
-import { TabsProyectos } from '@/components/organisms/TabsProyectos';
+import { TabsProyectos } from "@/components/organisms/TabsProyectos";
 const { currentLocale } = Astro;
 ---
 
