--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,7 +1,7 @@
 ---
-import {Nav} from "@/components/organisms/Nav";
+import { Nav } from "@/components/organisms/Nav";
 import { getI18N } from "@/i18n";
-import Layout from "@/layouts/Layout.astro"
+import Layout from "@/layouts/Layout.astro";
 
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
