--- a/src/pages/en/home.astro
+++ b/src/pages/en/home.astro
@@ -1,12 +1,12 @@
 ---
-import Layout from '@/layouts/Layout.astro';
-import Header from '@/components/templates/Header.astro';
-import { Nav } from '@/components/organisms/Nav';
-import Acerca from '@/components/templates/Acerca.astro';
-import Contactos from '@/components/templates/Contacto.astro'
-import Proyectos from '@/components/templates/Proyectos.astro';
-import Opiniones from '@/components/templates/Opiniones.astro';
-const {currentLocale} = Astro;
+import Layout from "@/layouts/Layout.astro";
+import Header from "@/components/templates/Header.astro";
+import { Nav } from "@/components/organisms/Nav";
+import Acerca from "@/components/templates/Acerca.astro";
+import Contactos from "@/components/templates/Contacto.astro";
+import Proyectos from "@/components/templates/Proyectos.astro";
+import Opiniones from "@/components/templates/Opiniones.astro";
+const { currentLocale } = Astro;
 ---
 
 <Layout>
