fix(lint): Se corrigen errores de lint y de variables no usadas, accesibilidad y mejor tipado en etiquetas

--- a/src/components/templates/Contacto.astro
+++ b/src/components/templates/Contacto.astro
@@ -1,8 +1,9 @@
 ---
 import { Form } from "@/components/features/contact/Form";
+
 const { currentLocale } = Astro;
 ---
 
-<div class="hero-content">
+<div class="hero-content lg:p-9 md:p-8 sm:p-4 p-2 mt-16">
   <Form client:load currentLocale={currentLocale} />
 </div>
