fix(accesibility): Se hacen mejoras de accesibilidad por recomendacion de las auditorias de vercel

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -50,7 +50,7 @@ const capitalizedTitle = capitalizeFirstLetter(titleLang);
     <meta property="og:title" content="Portafolio de Erick Gonzalez" />
     <meta
       property="og:description"
-      content="Portafolio de Erick Gonzalez, desarrollador web junior con experiencia en frontend y backend. Mira mis proyectos y habilidades."
+      content="Portafolio de Erick Gonzalez, desarrollador web con experiencia en frontend y backend. Mira mis proyectos y habilidades."
     />
     <meta property="og:image" content="https://khelde.vercel.app/kdl.webp" />
     <meta
@@ -69,7 +69,7 @@ const capitalizedTitle = capitalizeFirstLetter(titleLang);
     <meta property="twitter:title" content="Portafolio de Erick Gonzalez" />
     <meta
       property="twitter:description"
-      content="Portafolio de Erick Gonzalez, desarrollador web junior con experiencia en frontend y backend. Mira mis proyectos y habilidades."
+      content="Portafolio de Erick Gonzalez, desarrollador web con experiencia en frontend y backend. Mira mis proyectos y habilidades."
     />
     <meta
       property="twitter:image:alt"
@@ -81,7 +81,7 @@ const capitalizedTitle = capitalizeFirstLetter(titleLang);
     <meta property="og:title" content="Portafolio de Erick Gonzalez" />
     <meta
       property="og:description"
-      content="Portafolio de Erick Gonzalez, desarrollador web junior con experiencia en frontend y backend. Mira mis proyectos y habilidades."
+      content="Portafolio de Erick Gonzalez, desarrollador web con experiencia en frontend y backend. Mira mis proyectos y habilidades."
     />
     <!-- Metadatos personalizados para IA u otras plataformas -->
     <meta property="ia:markup_url" content="https://khelde.vercel.app/markup" />
